--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/drawer": "^7.7.9",
     "@react-navigation/native": "^7.1.25",
     "@react-navigation/native-stack": "^7.8.6",
+    "@reduxjs/toolkit": "^2.11.2",
     "expo": "~54.0.29",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
@@ -21,7 +22,9 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "react-redux": "^9.2.0",
+    "zustand": "^5.0.9"
   },
   "private": true,
   "overrides": {
