--- a/package.json
+++ b/package.json
@@ -13,19 +13,28 @@
     "@react-navigation/bottom-tabs": "^7.8.12",
     "@react-navigation/drawer": "^7.7.9",
     "@react-navigation/native": "^7.1.25",
-    "@react-navigation/native-stack": "^7.8.6",
+    "@react-navigation/native-stack": "^7.9.0",
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
     "expo": "~54.0.29",
+    "expo-auth-session": "~7.0.10",
+    "expo-camera": "~17.0.10",
+    "expo-contacts": "~15.0.11",
+    "expo-location": "~19.0.8",
+    "expo-notifications": "~0.32.15",
     "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
+    "firebase": "^12.7.0",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-web": "^0.21.0",
     "react-redux": "^9.2.0",
     "zustand": "^5.0.9"
   },
