--- a/.env
+++ b/.env
@@ -1,9 +1,5 @@
 EXPO_PUBLIC_FIREBASE_API_KEY="AIzaSyC9fTmr2N5VO0TDQIlaR5yhVVpvvMgpkv8"
-<<<<<<< HEAD
 EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN="devmobile-24ad0.firebaseapp.com"
-=======
-EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN= "devmobile-24ad0.firebaseapp.com"
->>>>>>> bae3edc68fac24d9da1baa4313d86661aaa8beba
 EXPO_PUBLIC_FIREBASE_PROJECT_ID="devmobile-24ad0"
 EXPO_PUBLIC_FIREBASE_APP_ID="1:535847667578:web:52e5d0bc944308712038c3"
-EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID=535847667578-ib8imnj90b05qu5qt4k4o8m568lrddpe.apps.googleusercontent.com
+EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID="535847667578-ib8imnj90b05qu5qt4k4o8m568lrddpe.apps.googleusercontent.com"
