--- a/package.json
+++ b/package.json
@@ -9,43 +9,39 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/datetimepicker": "8.4.4",
-    "@react-navigation/bottom-tabs": "^7.8.12",
-    "@react-navigation/drawer": "^7.7.9",
-    "@react-navigation/native": "^7.1.25",
-    "@react-navigation/native-stack": "^7.9.0",
-    "@reduxjs/toolkit": "^2.11.2",
-    "axios": "^1.13.2",
-    "expo": "~54.0.30",
-    "expo-auth-session": "~7.0.10",
-    "expo-camera": "~17.0.10",
-    "expo-contacts": "~15.0.11",
-    "expo-device": "~8.0.10",
-    "expo-location": "~19.0.8",
-    "expo-notifications": "~0.32.15",
-    "expo-sqlite": "~16.0.10",
-    "expo-status-bar": "~3.0.9",
-    "expo-web-browser": "~15.0.10",
-    "firebase": "^12.7.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "~4.16.0",
-    "react-native-vector-icons": "^10.3.0",
-    "react-native-web": "^0.21.0",
-    "react-redux": "^9.2.0",
-    "zustand": "^5.0.9"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-navigation/bottom-tabs": "^7.0.0",
+    "@react-navigation/drawer": "^7.0.0",
+    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native-stack": "^7.0.0",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
+    "expo": "~52.0.28",
+    "expo-auth-session": "~6.0.4",
+    "expo-camera": "~16.0.12",
+    "expo-contacts": "~14.0.11",
+    "expo-device": "~7.0.1",
+    "expo-location": "~18.0.5",
+    "expo-notifications": "~0.29.13",
+    "expo-sqlite": "~15.1.1",
+    "expo-status-bar": "~2.0.1",
+    "expo-web-browser": "~14.0.2",
+    "firebase": "^10.8.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.0",
+    "zustand": "^4.5.1"
   },
   "private": true,
-  "overrides": {
-    "react-native-worklets": "0.5.1"
-  },
   "devDependencies": {
-    "babel-preset-expo": "^54.0.8",
-    "baseline-browser-mapping": "^2.9.8"
+    "babel-preset-expo": "~12.0.0"
   }
 }
